--- a/notebooks/latent_space_analysis.ipynb
+++ b/notebooks/latent_space_analysis.ipynb
@@ -167,7 +167,7 @@
     "    'w1': [-1.5707, 2.094],\n",
     "    'w2': [-3.059, 3.059]\n",
     "}\n",
-    "collisionKey = 'inCollision' \n",
+    "collisionKey = 'collisionFree' \n",
     "HEADERS = ['right_' + joint_name for joint_name in JOINT_NAMES]\n",
     "\n",
     "\n",
@@ -177,7 +177,7 @@
     "headers = ['right_' + joint_name for joint_name in selected_joints]\n",
     "\n",
     "headers_w_collision = headers.copy()\n",
-    "headers_w_collision.append('inCollision')\n",
+    "headers_w_collision.append('collisionFree')\n",
     "\n",
     "print(\"The joint limits are: %s\" % joint_limits)\n",
     "print(\"The headers are: %s\" % headers)\n",
@@ -444,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
