--- a/notebooks/self_collision_data_analysis.ipynb
+++ b/notebooks/self_collision_data_analysis.ipynb
@@ -89,10 +89,10 @@
     "    'w2': [-3.059, 3.059]\n",
     "}\n",
     "\n",
-    "collisionKey = 'inCollision'\n",
+    "collisionKey = 'collisionFree'\n",
     "HEADERS = ['right_' + joint_name for joint_name in JOINT_NAMES]\n",
     "headers_w_collision = HEADERS.copy()\n",
-    "headers_w_collision.append('inCollision')\n",
+    "headers_w_collision.append('collisionFree')\n",
     "\n",
     "data = pd.read_csv(file_name, usecols=headers_w_collision)\n",
     "\n",
@@ -176,7 +176,7 @@
     "# Histogram plot for both generated and original data;\n",
     "\n",
     "original_data = pd.read_csv(original_data_file_name, usecols=headers_w_collision)\n",
-    "original_data_free = original_data[original_data['inCollision'] == 1]\n",
+    "original_data_free = original_data[original_data['collisionFree'] == 1]\n",
     "\n",
     "i = 1\n",
     "\n",
@@ -260,7 +260,7 @@
       "389  0.106485  0.164253 -0.575688  2.033375 -1.346289 -1.609231  0.763605   \n",
       "551  0.310911 -0.795655 -1.632119  1.410191  3.070905  1.191791  0.378551   \n",
       "\n",
-      "     inCollision  \n",
+      "     collisionFree  \n",
       "148            1  \n",
       "265            1  \n",
       "321            1  \n",
