--- a/notebooks/vae_baxter_self_collision.ipynb
+++ b/notebooks/vae_baxter_self_collision.ipynb
@@ -152,7 +152,7 @@
       "The joint limits are: [[-1.7016 -2.147  -3.0541 -0.05   -3.059  -1.5707 -3.059 ]\n",
       " [ 1.7016  1.047   3.0541  2.618   3.059   2.094   3.059 ]]\n",
       "The headers are: ['right_s0', 'right_s1', 'right_e0', 'right_e1', 'right_w0', 'right_w1', 'right_w2']\n",
-      "The headers with collisions are: ['right_s0', 'right_s1', 'right_e0', 'right_e1', 'right_w0', 'right_w1', 'right_w2', 'inCollision']\n",
+      "The headers with collisions are: ['right_s0', 'right_s1', 'right_e0', 'right_e1', 'right_w0', 'right_w1', 'right_w2', 'collisionFree']\n",
       "The complete headers are: ['right_s0', 'right_s1', 'right_e0', 'right_e1', 'right_w0', 'right_w1', 'right_w2']\n"
      ]
     }
@@ -169,7 +169,7 @@
     "    'w2': [-3.059, 3.059]\n",
     "}\n",
     "\n",
-    "collisionKey = 'inCollision' \n",
+    "collisionKey = 'collisionFree' \n",
     "HEADERS = ['right_' + joint_name for joint_name in JOINT_NAMES]\n",
     "\n",
     "selected_joints = JOINT_NAMES[0:num_joints]\n",
@@ -178,7 +178,7 @@
     "headers = ['right_' + joint_name for joint_name in selected_joints]\n",
     "\n",
     "headers_w_collision = headers.copy()\n",
-    "headers_w_collision.append('inCollision')\n",
+    "headers_w_collision.append('collisionFree')\n",
     "\n",
     "print(\"The joint limits are: %s\" % joint_limits)\n",
     "print(\"The headers are: %s\" % headers)\n",
